--- a/src/Components/Count/Count.css
+++ b/src/Components/Count/Count.css
@@ -114,6 +114,7 @@
     margin-left: 30px;
     font-size: 16px;
     margin-top: 40px;
+    margin-bottom: 10px;
 }
 .btn-activity:hover{
     background-color: rgb(0, 255, 170);
